# ChangeLog for dev-ruby/hashery
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hashery/ChangeLog,v 1.5 2014/08/19 11:48:12 armin76 Exp $

  19 Aug 2014; Raúl Porcel <armin76@gentoo.org> hashery-2.1.1.ebuild:
  add ~alpha/~arm/~ia64/~sparc/~x86, bug #519170

  12 Aug 2014; Anthony G. Basile <blueness@gentoo.org> hashery-2.1.1.ebuild:
  Keyword ~ppc and ~ppc64, bug #519170

  11 Aug 2014; Jeroen Roovers <jer@gentoo.org> hashery-2.1.1.ebuild:
  Marked ~hppa (bug #519170).

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> hashery-2.1.1.ebuild:
  Remove trailing '.' from DESCRIPTION.

*hashery-2.1.1 (15 May 2014)

  15 May 2014; Peter Wilmott <p8952@gentoo.org> +hashery-2.1.1.ebuild,
  +metadata.xml:
  New ebuild for hashery.