@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST hashery-2.1.1.gem 43008 SHA256 8f94ee21ba35f970d188491318f9b79ff7288e517301700e4d342ba9255d5c75 SHA512 f0fb1a0ca41264170bfeb970a2df5920109ed273f4f4617cfbde92e889ce6b5ec34e61be442182ddfca86efa13df3aab537bbc40d2c1e7791b74a9e5b4e0ca24 WHIRLPOOL 3b7e2e5b44ba917feec676c7548bdfca63c93f621eb296e36c6fcb87f3b1a5fedf0ce4335bac8cf369f364a980ec3c39617d4c3b5fc6b6aecc3f6e77c57e489b
-EBUILD hashery-2.1.1.ebuild 815 SHA256 037344fce2fc699bd3aa555c21d9f1c2cb945813247bfc8f6c321d6034ce1870 SHA512 e1f74c7ebec7b5219dd4444c4b4abf507eddbbd386652b036af86da57252d111ee98042f3ad52af699b762e7ba60cdf5482b1bd645299e11b3cbe2eae32e80aa WHIRLPOOL f824c3121cd0f8be139a9de686e08b4c9808ae70e794f47369eb40cd48a786e81db6a9f6780a9780c90b7b34ecfcf85dabeaf107f15bfff953fa2df3623fb0bd
-MISC ChangeLog 799 SHA256 a4f5f26d353532db0b25e377a8406fe188f04b6e2aaceacb1639d2fce656cb31 SHA512 dd5f9bea9d8dbf727335ecbf8da1a1a9d4df42906638d75ec53328f6251acc133b90576b0cbe920bd7177ddb23c13a6cd364e16feec13c45801fd3fa9bae57ab WHIRLPOOL 8c7e6659e55e23ef0ddea40042470b3741d5d90f54f8755fa5aa14c65f2a96ffdbf91e328927d40f6907e0c5a893893b331c0e7241f01abfdd29693df34cff56
+EBUILD hashery-2.1.1.ebuild 821 SHA256 45038233cd94d676dc78aef213cf99a57b45b63dc43bbed26ae22459224fe4e4 SHA512 3ae5c06282bbe7a8eef8abc58d8a0e6b6ba02b879883217fcadb315b2f78742b800f453e2ee47d89fa764f050074db92040c931e92b71faa7eb0c4116bcd8475 WHIRLPOOL de0c4ef458b4cebd55d61b39c54b05a22befdfd3ab0ba784c02d0a5d5695ddc83d104fdde79bf9ad2c11eb32fe66e7c453044c90e26787791e86de49142b0926
+MISC ChangeLog 885 SHA256 3db4021a5bb0534e2dbc01cc2080ed25824d54c30562e4529223576d1742b842 SHA512 8515ca525badb6550ac06f54f526151f17d70a9d992d22bc0d3ad4fd2fc279d30941db238fbec6bdd04b9e02c7c591d308ddafcce6c2113f382a02fd9ecfc757 WHIRLPOOL fcb0fbd57629bb81ff40d7bf2eaf875771a55af1e5a61fbd714cc7bdc570ce77be04fc7c0d11303bf45315b7627da4e8aecfb611e7e01124fb698d390cf97f25
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPzOX0ACgkQuQc30/atMkD6AQCfSbt6AZYW//RyACkWezw4Q/w5
-FLgAoJFQPDQY95NN+I0wnYj01EOL0jt9
-=DHly
+iF4EAREIAAYFAlVEeU0ACgkQiIP6VqMIqNeZ2AD6AvzGG+XS8NP5duJcI3tWlPt/
+ozvG+WaOeThDg1nnx08BAIFvqDR9QFnHrT9Tu377EbCn3wggWSbsXjTAr82C+eI+
+=7+OP
 -----END PGP SIGNATURE-----
