@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=ruby_targets_ruby19? ( test? ( dev-ruby/lemon[ruby_targets_ruby19] dev-ruby/qed[ruby_targets_ruby19] dev-ruby/rubytest[ruby_targets_ruby19] dev-ruby/rubytest-cli[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/lemon[ruby_targets_ruby20] dev-ruby/qed[ruby_targets_ruby20] dev-ruby/rubytest[ruby_targets_ruby20] dev-ruby/rubytest-cli[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/lemon[ruby_targets_ruby21] dev-ruby/qed[ruby_targets_ruby21] dev-ruby/rubytest[ruby_targets_ruby21] dev-ruby/rubytest-cli[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( doc? ( dev-ruby/yard[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( doc? ( dev-ruby/yard[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( doc? ( dev-ruby/yard[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
+DEPEND=ruby_targets_ruby19? ( test? ( dev-ruby/lemon[ruby_targets_ruby19] dev-ruby/qed[ruby_targets_ruby19] dev-ruby/rubytest[ruby_targets_ruby19] dev-ruby/rubytest-cli[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/lemon[ruby_targets_ruby20] dev-ruby/qed[ruby_targets_ruby20] dev-ruby/rubytest[ruby_targets_ruby20] dev-ruby/rubytest-cli[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/lemon[ruby_targets_ruby21] dev-ruby/qed[ruby_targets_ruby21] dev-ruby/rubytest[ruby_targets_ruby21] dev-ruby/rubytest-cli[ruby_targets_ruby21] ) ) ruby_targets_ruby22? ( test? ( dev-ruby/lemon[ruby_targets_ruby22] dev-ruby/qed[ruby_targets_ruby22] dev-ruby/rubytest[ruby_targets_ruby22] dev-ruby/rubytest-cli[ruby_targets_ruby22] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby22? ( dev-lang/ruby:2.2 ) ruby_targets_ruby19? ( doc? ( dev-ruby/yard[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( doc? ( dev-ruby/yard[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( doc? ( dev-ruby/yard[ruby_targets_ruby21] ) ) ruby_targets_ruby22? ( doc? ( dev-ruby/yard[ruby_targets_ruby22] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_ruby22? ( virtual/rubygems[ruby_targets_ruby22] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_ruby22? ( virtual/rubygems[ruby_targets_ruby22] ) )
 DESCRIPTION=The Hashery is a tight collection of Hash-like classes
 EAPI=5
 HOMEPAGE=http://rubyworks.github.com/hashery
-IUSE=elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 doc test
+IUSE=elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 ruby_targets_ruby22 doc test
 KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86
 LICENSE=BSD-2
-RDEPEND=ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] )
-REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
+RDEPEND=ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby22? ( dev-lang/ruby:2.2 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_ruby22? ( virtual/rubygems[ruby_targets_ruby22] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 ruby_targets_ruby22 )
 SLOT=0
 SRC_URI=mirror://rubygems/hashery-2.1.1.gem
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-utils-2	8f4127eaee79040ecb5e8d8a528d7084	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=8003b965a9f124e0e95346334ee2cda7
+_md5_=e61b02a1fceadd9b6b0667faa906c64c
