@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/hashery
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hashery/ChangeLog,v 1.5 2014/08/19 11:48:12 armin76 Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hashery/ChangeLog,v 1.6 2015/05/02 07:14:20 graaff Exp $
+
+  02 May 2015; Hans de Graaff <graaff@gentoo.org> hashery-2.1.1.ebuild:
+  Add ruby22.
 
   19 Aug 2014; Raúl Porcel <armin76@gentoo.org> hashery-2.1.1.ebuild:
   add ~alpha/~arm/~ia64/~sparc/~x86, bug #519170
